Fix extra space FF adds to buttons

--- a/src/less/modules/btn.less
+++ b/src/less/modules/btn.less
@@ -12,6 +12,11 @@
     white-space: nowrap;
     vertical-align: middle;
 
+    &::-moz-focus-inner {
+        margin: -1px;
+        padding: 0;
+    }
+
     .caret {
         margin-left: 6px;
     }
